# doc_custom_kie

./: LICENCE  Makefile  README.md  pyproject.toml
src/doc_custom_extraction/: annotate.py  inference.py  layoutlmv3_ft.py
src/doc_custom_extraction/templates/: index.html  index_inference.html
